--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jun 15 14:07:16 KST 2023
-sdk.dir=C\:\\Users\\user\\AppData\\Local\\Android\\Sdk
+#Sun Aug 06 16:10:31 KST 2023
+sdk.dir=/Users/rant/Library/Android/sdk
