--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Aug 06 16:10:31 KST 2023
-sdk.dir=/Users/rant/Library/Android/sdk
+#Fri Oct 20 14:43:01 KST 2023
+sdk.dir=C\:\\DevTool\\android_sdk
