#2 말 이동할 수 있는 위치 조회 구현

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Oct 12 20:56:22 KST 2023
-sdk.dir=/Users/jeongsoyeong/Library/Android/sdk
+#Thu Nov 23 11:02:53 KST 2023
+sdk.dir=C\:\\DevTool\\android_sdk
