--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,12 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
+      - name: docker build and push
+        run: |
+          docker login -u ${{ secrets.BSH_DOCKER_USERNAME }} -p ${{ secrets.BSH_DOCKER_PASSWORD }}
+          docker build -t ${{ secrets.BSH_DOCKER_REPO }}/som2 .
+          docker push ${{ secrets.DOCKER_REPO }}/som2
+
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
         env:
