--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Setup JDK17
+      - name: Setup to JDK17
         uses: actions/setup-java@v2
         with:
           distribution: 'adopt'
