--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,6 +64,6 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
           aws-region: ap-northeast-2
-        script: |
-          docker stop test && docker rm test
-          docker run -e TZ=Asia/Seoul -d -p 8080:8080 --name test --restart always public.ecr.aws/f9s3i1t6/${{ secrets.ECR_REPOSITORY_NAME }}:latest
+          run: |
+            docker stop test && docker rm test
+            docker run -e TZ=Asia/Seoul -d -p 8080:8080 --name test --restart always public.ecr.aws/f9s3i1t6/${{ secrets.ECR_REPOSITORY_NAME }}:latest
