--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,8 +60,9 @@ jobs:
   deploy:
     needs: build
     name: CD
-    runs-on: [self-hosted, label-ecr-test]
 
+    runs-on: ubuntu-latest
+    
     steps:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
