--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,27 +57,37 @@ jobs:
           docker tag som2:latest public.ecr.aws/f9s3i1t6/${{ secrets.ECR_REPOSITORY_NAME }}:latest
           docker push public.ecr.aws/f9s3i1t6/${{ secrets.ECR_REPOSITORY_NAME }}:latest
 
-  deploy:
-    needs: build
-    name: CD
-
-    runs-on: ubuntu-latest
-    
-    steps:
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
-          aws-region: ap-northeast-2
-
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
-
       - name: Pull image from Amazon ECR and restart container
         run: |
-          docker pull public.ecr.aws/f9s3i1t6/${{ secrets.ECR_REPOSITORY_NAME }}:latest
-          docker stop test && docker rm test
-          docker run -d --name test -p 8080:8080 --restart unless-stopped public.ecr.aws/f9s3i1t6/${{ secrets.ECR_REPOSITORY_NAME }}:latest
-  
+          docker run -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY }}
+          -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_KEY }}
+          -e AWS_DEFAULT_REGION=ap-northeast-2
+          -d --name CDtest -p 8080:8080 --restart always public.ecr.aws/f9s3i1t6/${{ secrets.ECR_REPOSITORY_NAME }}:latest
+          
+
+
+
+#  deploy:
+#    needs: build
+#    name: CD
+#
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#      - name: Configure AWS credentials
+#        uses: aws-actions/configure-aws-credentials@v1
+#        with:
+#          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+#          aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
+#          aws-region: ap-northeast-2
+#
+#      - name: Login to Amazon ECR
+#        id: login-ecr
+#        uses: aws-actions/amazon-ecr-login@v1
+#
+#      - name: Pull image from Amazon ECR and restart container
+#        run: |
+#          docker pull public.ecr.aws/f9s3i1t6/${{ secrets.ECR_REPOSITORY_NAME }}:latest
+#          docker stop test && docker rm test
+#          docker run -d --name test -p 8080:8080 --restart unless-stopped public.ecr.aws/f9s3i1t6/${{ secrets.ECR_REPOSITORY_NAME }}:latest
+#
