--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,9 +59,9 @@ jobs:
 
       - name: Pull image from Amazon ECR and restart container
         run: |
-          echo ${{ secrets.somkey }} >> $HOME/key.pem
-          chmod 400 $HOME/key.pem
-          ssh -i $HOME/key.pem ${{ secrets.AWS_EC2_URL }}
+          echo ${{ secrets.somkey }} >> key.pem
+          chmod 400 key.pem
+          ssh -i key.pem ${{ secrets.AWS_EC2_URL }}
           docker run -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY }} -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_KEY }} -e AWS_DEFAULT_REGION=ap-northeast-2 -d --name CDtest -p 8080:8080 public.ecr.aws/f9s3i1t6/${{ secrets.ECR_REPOSITORY_NAME }}:latest
 
       - name: Check running containers
