--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,11 +59,12 @@ jobs:
 
       - name: Pull image from Amazon ECR and restart container
         uses: appleboy/ssh-action@master
-        run: |
-          echo "${{ secrets.somkey }}" >> key.pem
-          chmod 400 key.pem
-          ssh -T -i key.pem -o "StrictHostKeyChecking no" ${{ secrets.AWS_EC2_URL }}
-          docker run -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY }} -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_KEY }} -e AWS_DEFAULT_REGION=ap-northeast-2 -d --name CDtest -p 8080:8080 public.ecr.aws/f9s3i1t6/${{ secrets.ECR_REPOSITORY_NAME }}:latest
+        with:
+          script: |
+            echo "${{ secrets.somkey }}" >> key.pem
+            chmod 400 key.pem
+            ssh -T -i key.pem -o "StrictHostKeyChecking no" ${{ secrets.AWS_EC2_URL }}
+            docker run -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY }} -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_KEY }} -e AWS_DEFAULT_REGION=ap-northeast-2 -d --name CDtest -p 8080:8080 public.ecr.aws/f9s3i1t6/${{ secrets.ECR_REPOSITORY_NAME }}:latest
 
       - name: Check running containers
         run: docker ps
