--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,13 +61,11 @@ jobs:
         run: |
           echo "${{ secrets.somkey }}" >> key.pem
           chmod 400 key.pem
-          ssh -T -i key.pem -o "StrictHostKeyChecking no" ${{ secrets.AWS_EC2_URL }}
+          ssh -T -i key.pem -o "StrictHostKeyChecking no" ${{ secrets.AWS_EC2_URL }} "docker run -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY }} -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_KEY }} -e AWS_DEFAULT_REGION=ap-northeast-2 -d --name CDtest -p 8080:8080 public.ecr.aws/f9s3i1t6/${{ secrets.ECR_REPOSITORY_NAME }}:latest"
 
-      - name: Check running containers
-        run: |
-          ls -a
-          docker run -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY }} -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_KEY }} -e AWS_DEFAULT_REGION=ap-northeast-2 -d --name CDtest -p 8080:8080 public.ecr.aws/f9s3i1t6/${{ secrets.ECR_REPOSITORY_NAME }}:latest
-
+#      - name: Check running containers
+#        run: |
+#          ls -a
       - name: Check running containers
         run: docker ps
 
