--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,8 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Build gradlew
-        run: ./gradlew build
+        run: ./gradlew bootJar
+#        run: ./gradlew build
 
 #      - name: docker build and push
 #        run: |
@@ -57,12 +58,21 @@ jobs:
           docker tag som2:latest public.ecr.aws/f9s3i1t6/${{ secrets.ECR_REPOSITORY_NAME }}:latest
           docker push public.ecr.aws/f9s3i1t6/${{ secrets.ECR_REPOSITORY_NAME }}:latest
 
-      - name: connect EC2
-        run: |
-          echo "${{ secrets.somkey }}" >> key.pem
-          chmod 400 key.pem
-          ssh -o StrictHostKeyChecking=no -i key.pem ${{ secrets.AWS_EC2_URL }} 
+      - name: EC2 Docker Run
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.AWS_EC2_URL }}
+          username: ubuntu
+          key: ${{ secrets.somkey }}
+          script: |
             docker run -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY }} -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_KEY }} -e AWS_DEFAULT_REGION=ap-northeast-2 -d --name CDtest -p 8080:8080 public.ecr.aws/f9s3i1t6/${{ secrets.ECR_REPOSITORY_NAME }}:latest
+
+      #      - name: connect EC2
+#        run: |
+#          echo "${{ secrets.somkey }}" >> key.pem
+#          chmod 400 key.pem
+#          ssh -o StrictHostKeyChecking=no -i key.pem ${{ secrets.AWS_EC2_URL }}
+#            docker run -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY }} -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_KEY }} -e AWS_DEFAULT_REGION=ap-northeast-2 -d --name CDtest -p 8080:8080 public.ecr.aws/f9s3i1t6/${{ secrets.ECR_REPOSITORY_NAME }}:latest
 
 #      - name: Check running containers
 #        run: |
