--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,8 +61,8 @@ jobs:
       - name: EC2 Docker Run
         uses: appleboy/ssh-action@master
         with:
-          host: ec2-user@ec2-3-37-84-188.ap-northeast-2.compute.amazonaws.com
-          username: ubuntu
+          host: ec2-3-37-84-188.ap-northeast-2.compute.amazonaws.com
+          username: ec2-user
           key: ${{ secrets.somkey }}
           script: |
             docker run -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY }} -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_KEY }} -e AWS_DEFAULT_REGION=ap-northeast-2 -d --name CDtest -p 8080:8080 public.ecr.aws/f9s3i1t6/${{ secrets.ECR_REPOSITORY_NAME }}:latest
