--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,7 +53,7 @@ jobs:
         run: |
           # Build a docker container and
           # push it to ECR not ECS so need to change
-          aws ecr-public get-login-password --region ap-northeast-2 | docker login --username AWS --password-stdin public.ecr.aws/f9s3i1t6
+          aws ecr-public get-login-password --region northeast-2 | docker login --username AWS --password-stdin public.ecr.aws/f9s3i1t6
           docker build -t som2 .
           docker tag som2:latest public.ecr.aws/f9s3i1t6/${{ secrets.ECR_REPOSITORY_NAME }}:latest
           docker push public.ecr.aws/f9s3i1t6/${{ secrets.ECR_REPOSITORY_NAME }}:latest
@@ -66,7 +66,6 @@ jobs:
           key: ${{ secrets.somkey }}
           port: 22
           script: |
-            aws ecr-public get-login-password --region ap-northeast-2 | docker login --username AWS --password-stdin public.ecr.aws/f9s3i1t6
             docker stop CDtest && docker rm CDtest
             docker rmi public.ecr.aws/f9s3i1t6/${{ secrets.ECR_REPOSITORY_NAME }}:latest
             docker run -it -d --name CDtest -p 8080:8080 public.ecr.aws/f9s3i1t6/${{ secrets.ECR_REPOSITORY_NAME }}:latest
