--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,7 +62,7 @@ jobs:
           aws ec2 authorize-security-group-ingress --group-id ${{ secrets.AWS_SG_ID }} --protocol tcp --port 22 --cidr ${{ steps.ip.outputs.ipv4 }}/32
 
 
-      #this part needs change host using security , v1+ upgrade EC2
+      #this part needs change host using security , v1+ upgrade EC2 type
       - name: AWS EC2 Connection
         uses: appleboy/ssh-action@master
         with:
