logging 추가 및 COR 제거

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,3 +7,9 @@ server:
   servlet:
     session:
       timeout: 3600 # 1시간
+
+logging:
+  level:
+    org:
+      springframework:
+        web: DEBUG
